# AD-fusionbox

./: .gitignore  README.md  dependencies.repos
docs/: understand_dbc_file.md
docs/wiki/: can_frame_organization.md  can_frame_structure.md  ros2_message_serialization.md  rtk_gnss.md  srr308_configuration_handbook.md  understand_CAN_dbc_file.md  understand_dbc_file.md
src/bringup/: CMakeLists.txt  package.xml
src/bringup/config/: data_pipeline.yaml  understand_dbc_file.md
src/bringup/config/dbc/: Leaf_TUe_VD_Experiments.dbc  SC13S.dbc  SRR308_CAN_Database_ID0-7.dbc
src/bringup/config/rules/: radar_extraction_rules.yaml
src/drivers/: package.xml  setup.cfg  setup.py
src/drivers/drivers/: can_parser.py
src/localization/: package.xml  setup.cfg  setup.py
src/msgs/: CMakeLists.txt  package.xml
src/msgs/msg/: RadarCluster.msg  RadarClusterList.msg  RadarObject.msg  RadarObjectList.msg
src/offline/: package.xml  setup.cfg  setup.py
src/offline/offline/: bag_reader.py  data_export.py  message_parser.py
src/perception/: package.xml  setup.cfg  setup.py
